test/controlplane/policies/k8s/v1.24/state1.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"knp-default-allow-egress","namespace":"policy1"},"spec":{"egress":[{}],"podSelector":{},"policyTypes":["Egress"]}}
    creationTimestamp: "2022-08-03T14:36:05Z"
    generation: 1
    name: knp-default-allow-egress
    namespace: policy1
    resourceVersion: "651"
    uid: 8a57dce7-0352-4b57-9f4c-9db36b860fa0
  spec:
    egress:
    - {}
    podSelector: {}
    policyTypes:
    - Egress
  status: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
