test/controlplane/policies/k8s/v1.24/state2.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"knp-default-allow-ingress","namespace":"policy2"},"spec":{"ingress":[{}],"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2022-08-03T14:36:05Z"
    generation: 1
    name: knp-default-allow-ingress
    namespace: policy2
    resourceVersion: "656"
    uid: eef3bd7b-9da8-4b87-bf68-f99b57333cb8
  spec:
    ingress:
    - {}
    podSelector: {}
    policyTypes:
    - Ingress
  status: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
