test/controlplane/policies/k8s/v1.24/state4.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"knp-default-deny-ingress","namespace":"policy4"},"spec":{"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2022-08-03T14:36:06Z"
    generation: 1
    name: knp-default-deny-ingress
    namespace: policy4
    resourceVersion: "664"
    uid: ace041eb-425b-43d9-b063-39b731faadc2
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
  status: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
