test/controlplane/policies/k8s/v1.24/state5.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"knp-default-deny-ingress-egress","namespace":"policy5"},"spec":{"podSelector":{},"policyTypes":["Ingress","Egress"]}}
    creationTimestamp: "2022-08-03T14:36:06Z"
    generation: 1
    name: knp-default-deny-ingress-egress
    namespace: policy5
    resourceVersion: "668"
    uid: e9d67774-4f1c-4f5b-85ec-caa6e168f1f9
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
  status: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
